# COIL-Webserver

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  rebuild-server.sh  run-server.sh
.devcontainer/: Dockerfile  devcontainer.json
core/include/: MySocket.h  commands.h  constants.h  pktdef.h  pktdef_endianess.h  types.h
core/src/: MySocket.cpp  RobotTelemetry.cpp  pktdef.cpp
include/: MySocket.h  pktdef.h  types.h
install_scripts/: install_deps.sh
public/: index.html
public/scripts/: command-history.js  connection-config.js  robot-control.js  theme-switcher.js
public/styles/: dashboard.css  style.css  themes.css
src/: main.cpp
